--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-02 18:45+0200\n"
+"POT-Creation-Date: 2014-06-03 11:17+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -223,7 +223,7 @@ msgstr "Analista y encargado de pruebas"
 
 #: .\templates\webapp\about_team.html.py:113
 msgid "Developer Lead"
-msgstr "Líder de desarroladores"
+msgstr "Líder de desarrollo"
 
 #: .\templates\webapp\affinity.html.py:13
 msgid "The affinity is: "
